<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="index">首页</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_hand">新手体验</string>
    <string name="pz_product">配资产品</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loading">加载中...</string>
    <string name="trader">操盘</string>
    <string name="mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="knowlege">基础知识</string>
    <string name="task">任务中心</string>
    <string name="contract_cur">当前合约</string>
    <string name="contract_history">历史合约</string>
    <string name="login">登录</string>
    <string name="sign_in">注册</string>
    <string name="balance">帐户余额</string>
    <string name="cash">现金帐户</string>
    <string name="integral">积分帐户</string>
    <string name="asset_count">资产统计</string>
    <string name="coupons">优惠券</string>
    <string name="order">我的订单</string>
    <string name="help_center">帮助中心</string>
    <string name="about_us">关于我们</string>
    <string name="phone">请输入手机号</string>
    <string name="pwd">请输入密码</string>
    <string name="regiest">快速注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="auth_code">验证码</string>
    <string name="sure">确定</string>
    <string name="retry">重试</string>
    <string name="set_pwd">请设置密码</string>
    <string name="set_new_pwd">请设置新密码</string>
    <string name="registered">注册</string>
    <string name="user_contract">《用户协议》</string>
    <string name="login_or_registered">登录 / 注册</string>
    <string name="re_send_verify_code">重新发送验证码</string>
    <string name="cash_in">充值</string>
    <string name="cash_out">提现</string>
    <string name="application_count">请输入申请资金</string>
    <string name="application_contract">申请合约</string>
    <string name="next">下一步</string>
    <string name="my_contract">我的合约</string>
    <string name="contract_rule">合约金额 = 申请资金 + 杠杆本金</string>
    <string name="application_now">立即申请</string>
    <string name="warning_content">触及警戒线会被限制买入，只能卖出,请密切关注并及时追加保证金至警戒线</string>
    <string name="stop_line">止损线</string>
    <string name="warning_line">警戒线</string>
    <string name="stop_line_content">当触及止损线，即会被强制平仓。</string>
    <string name="get_it">知道了</string>
    <string name="cancel">取消</string>
    <string name="application_sub_content">支付金额 = 杠杆本金 + 预存管理费</string>
    <string name="hint">提示</string>


    <string name="footer_text">The Footer</string>
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已经到底了</string>
    <string name="application_double">申请合约享受盈利翻倍</string>
    <string name="contract_amount">合约金额</string>
    <string name="margin">杠杆本金</string>
    <string name="can_use_money">可用现金</string>
    <string name="read_and_accept">申请即表示已阅读并同意</string>
    <string name="contract_txt">《操盘协议》</string>

    <string name="guide_speed_one">实名认证，资金第三方监管</string>
    <string name="guide_one_speed">资 金 安 全</string>
    <string name="guide_speed_two">品种多样，最低1000元起</string>
    <string name="guide_two_speed">超 低 费 用</string>
    <string name="guide_speed_three">实时监控，自动检测</string>
    <string name="guide_three_speed">风 险 控 制</string>
    <string name="guide_speed_four"> </string>
    <string name="guide_four_speed">新 人 有 礼</string>
    <string name="contract_me"><u>请联系客服</u></string>
    <string name="phone_num">400-880-3015</string>
    <string name="forget_pwd_underline"><u>忘记密码</u></string>


    <string name="content_step_0">This is the first step. Click OK button to next step.\n\nTest Message.</string>
    <string name="content_step_1">This is the second step. Click OK button to next step or Cancel button to previous step.\n\nThe summary text of each step is optional. If you haven\'t set, summary view won\'t be displayed.</string>
    <string name="content_step_2">This is the last step. You can finish steps now.</string>

    <string name="toggle_animation_button">Toggle Animation</string>
    <string name="share_profile">分享赚钱</string>
    <string name="commit_pay">确认支付</string>
    <string name="self_selct">自选</string>
    <string name="contract">合约</string>

    <string name="flash_chart">闪电图</string>
    <string name="trend_chart">分时图</string>
    <string name="kline_chart">K线图</string>
    <string name="quotation_chart">盘口</string>
</resources>
